k3os-bootstrap/nodes/data/kustomizations/argo/base/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
 # annotations:
 #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
 #   traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  #tls:
  #- hosts:
  #    - data-argocd.ctmartin.me
  #  secretName: argocd-tls
  rules:
  - host: data-argocd.lab.ctmartin.me
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: http
  - host: data-argocd.ctmartin.me
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: http
